<resources>
    <string name="app_name_placeholder">Ride %1$s</string>
    <string name="app_name_formatted_placeholder">Ride|%1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="help">Help</string>
    <string name="ride_request">Ride Request Type</string>
    <string name="earnings">Earnings</string>
    <string name="settings">Settings</string>
    <string name="empty" />
    <string name="edit_account">Edit Account</string>
    <string name="rate_us_on_google_play">Rate us on Google Play</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="legal">Legal</string>
    <string name="sign_out">Sign out</string>
    <string name="error_version_info">Error getting version info</string>
    <string name="pass_spaces">Password cannot contain spaces</string>
    <string name="phone_number_10_digits">Phone number should have at least 10 digits</string>
    <string name="inactive_warning">Driver account not yet activated and pending approval.</string>
    <string name="coming_soon_in_your_area">Coming soon in your area</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="placeholder_rate">5</string>
    <string name="hint_leave_comment">Leave comment</string>
    <string name="rate_your_ride">Rate your ride</string>
    <string name="text_cancel_ride_dialog">Do you really want to cancel this ride?</string>
    <string name="mock">Mock</string>
    <string name="location_error">Can not get location. Please check settings and enable location.</string>
    <string name="priority_info">Priority multiplier:</string>
    <string name="placeholder_home_location">Home\n205 Congress ave # 2555</string>
    <string name="placeholder_location">Work\n401 Congress Ave #2650</string>
    <string name="rider_home_label">Home\n</string>
    <string name="rider_work_label">Work\n</string>
    <string name="message_ride_cancelled_by_driver">Your ride is cancelled by the driver.</string>
    <string name="message_ride_cancelled_by_admin">Your ride is cancelled by admin.</string>
    <string name="message_ride_cancelled_by_user">Your ride has been successfully cancelled</string>
    <string name="phone">Phone</string>
    <string name="unknown_error">Something went wrong. Please try again later.</string>
    <string name="scheme_sms">sms</string>
    <string name="scheme_telephone">tel:</string>
    <string name="text_regular_car_label">Regular</string>
    <string name="text_suv_car_label">SUV</string>
    <string name="text_luxury_car_label">Premium</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="your_last_trip">Your Last Trip</string>
    <string name="comment_if_rate_is_less">Comment is required if rate is less than 3</string>
    <string name="price_placeholder">0</string>
    <string name="cannot_logout_during_ride">You cannot logout during active ride</string>
    <string name="extra_sms">sms_body</string>
    <string name="text_tabulation">\t</string>
    <string name="version">Version\u00A0</string>
    <string name="navigate">Navigate</string>
    <string name="map.rate.title">Driver Earnings</string>
    <string name="map.rate.rate_rider">Rate Rider</string>
    <string name="map.rate.submit">Submit</string>
    <string name="menu.decline">Decline</string>
    <string name="menu.contact">Contact</string>
    <string name="menu.support">Support</string>
    <string name="action_go_online">OFFLINE</string>
    <string name="action_go_offline">ONLINE</string>
    <string name="action_sync">SYNC</string>
    <string name="action_in_progress">Syncing</string>
    <string name="slide_to_arrive">Arrived</string>
    <string name="slide_to_start_trip">Begin Trip</string>
    <string name="slide_to_finish">End Trip</string>
    <string name="nickname">Nickname</string>
    <string name="car_type_save_warning">Please select at least one car category</string>
    <string name="ride_request_change_error">You cannot change ride type during trip.</string>
    <string name="ride_request_please_select">Please select car type</string>
    <string name="ride_request_description">Your current ride request type is now set to the following categories. You are set to receive:\n\n</string>
    <string name="ride_request_female_only">\nfemale driver requests ONLY</string>
    <string name="ride_request_dc_only">\ndirect connect requests ONLY</string>
    <string name="ride_request_and">\nand\n</string>
    <string name="ride_request_female_driver_requests">\nfemale driver requests</string>
    <string name="ride_request_dc_requests">\ndirect connect requests</string>
    <string name="ride_request_all_selected">\n\nAll car types are selected</string>
    <string name="ride_request_select_others">\n\nSelect or register for other car categories to receive ride requests in those categories.</string>
    <string name="ride_request_online">%1$s %2$s is online</string>
    <string name="ride_request_you_are_online">You are online</string>
    <string name="ride_request_description_online">You are set to receive\n\n</string>
    <string name="ride_request_female_only_online">%s\nfemale driver requests ONLY\n\nTo receive requests from all genders, please visit Menu -> Ride Request Type</string>
    <string name="ride_request_dc_only_online">%s\ndirect connect requests ONLY\n\nTo remove this filter, please visit Menu -> Ride Request Type</string>
    <string name="ride_request_by_admin_title">Car Categories Updated by Admin!</string>
    <string name="ride_request_by_admin_message">Please visit Menu -> Ride Request Type to review</string>
    <string name="ride_request_added">%s activated</string>
    <string name="ride_request_removed">%s disabled</string>
    <string name="ride_request_go_to_enable">\n\nPlease visit Menu -> Ride Request Type to enable</string>
    <string name="ride_request_missed_title">Car Categories Disabled!</string>
    <string name="ride_request_missed_message">Please visit Menu -> Ride Request Type to enable</string>
    <string name="ride_request_missed">Car category &lt;%s&gt; was disabled due to many consecutive missed requests.\nPlease visit Menu -> Ride Request Type to enable</string>
    <string name="ride_request_missed_plural">Car categories &lt;%s&gt; were disabled due to many consecutive missed requests.\nPlease visit Menu -> Ride Request Type to enable</string>
    <string-array name="week_days">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>
    <string name="text_weekly_earnings">Weekly Earnings</string>
    <string name="text_earnings">Earnings</string>
    <string name="text_date_delimiter">" - "</string>
    <string name="text_hours_online">HOURS ONLINE</string>
    <string name="text_trips">TRIPS</string>
    <string name="text_current_rating">CURRENT RATING</string>
    <string name="text_this_week">This Week:</string>
    <string name="text_header_number_nof_trips">NUMBER\nOF TRIPS</string>
    <string name="text_header_total_fare">TOTAL\nFARE</string>
    <string name="text_header_total_ra_fee">TOTAL RA\nFEE</string>
    <string name="text_header_total_earnings">TOTAL\nEARNINGS</string>
    <string name="ride_cancelled">Trip was cancelled</string>
    <string name="ride_cancelled_by_rider">%1$s has cancelled the ride.</string>
    <string name="ride_cancelled_by_rider_with_fee">%1$s has cancelled the ride. You will receive $%2$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_with_fee">Your ride has been cancelled. You will receive $%1$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_without_fee">Your ride has been cancelled.</string>
    <string name="ride_cancelled_by_admin">Ride is cancelled by administrator</string>
    <string name="text_contact_rider_dialog">How do you want to contact your rider?</string>
    <string name="text_daily_earnings">Daily Earnings</string>
    <string name="text_trips_header">Trips</string>
    <string name="text_your_earning">Your earning</string>
    <string name="text_ride_service_fee">%1$s Fee</string>
    <string name="text_total_fare">Total Fare</string>
    <string name="text_time_fare">Time Fare</string>
    <string name="text_distance_fare">Distance Fare</string>
    <string name="text_base_fare">Base Fare</string>
    <string name="text_email_title">"Driver Support Request - "</string>
    <string name="text_body_partial_1">"My Name is "</string>
    <string name="text_body_partial_2"><![CDATA[" <"]]></string>
    <string name="text_body_partial_3"><![CDATA[>]]></string>
    <string name="text_body_partial_4">" ("</string>
    <string name="text_body_partial_5">"Driver ID: "</string>
    <string name="text_body_partial_6">).</string>
    <string name="text_new_line">\n</string>
    <string name="text_body_partial_7">"I have a question about (RideID: "</string>
    <string name="text_body_partial_8">"Question: "</string>
    <string name="text_chooser_title">Send Email</string>
    <string name="hint_password">Password</string>
    <string name="text_password_placeholder">1234567890</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_new_password">New Password (6+ Characters)</string>
    <string name="text_oops">OOPS</string>
    <string name="text_choose_password_alert">Please choose a password with at least 6 or more characters</string>
    <string name="text_password_mismatch">Passwords don\'t match</string>
    <string name="text_password_update_success">Your password has been updated successfully</string>
    <string name="notification.rider">Rider</string>
    <string name="notification.destination_changed">Destination Changed</string>
    <string name="notification.request">%1$s is requesting a ride</string>
    <string name="notification_request_eta">%1$s is requesting a ride, ETA: %2$s</string>
    <string name="notification.rate">Please, rate your ride</string>
    <string name="share_action_navigate">Navigate</string>
    <string name="signed_out">You are signed out</string>
    <string name="rider_phone_number">Rider phone number: </string>
    <string name="cant_find_app_for_call">Can\'t find application to call</string>
    <string name="cant_find_app_to_send_message">Can\'t find application to send message</string>
    <string name="tips">TIPS</string>
    <string name="tip">Tip</string>
    <string name="rider_cancel_fee">Rider Cancellation Fee</string>
    <string name="send_report">Report defect</string>
    <string name="text_cancel_ride_confirmation">Are you sure you want to cancel ?</string>
    <string name="dynamic_queue_name">%1$s Queue</string>
    <string name="queue_in_number_info">Numbers represent your current spot\n in queue</string>
    <string name="queue_out_number_info">Numbers represent amount of drivers in the %s queue</string>
    <string name="queue_leaving_area_desc"> You have left the queue zone and have been removed from the queue</string>
    <string name="queue_leaving_inactive_desc">You have been removed from the queue because you were offline</string>
    <string name="default_navigation_pref">Default Navigation App</string>
    <string name="refer_friend_title">Refer A Friend</string>
    <string name="my_cars">My Cars</string>
    <string name="stats_title">My Stats</string>
    <string name="direct_connect_description">To connect with a Rider directly, please have  the rider to input this Driver ID</string>
    <string name="direct_connect_new_id">Get new driver ID</string>
    <string name="direct_connect_id_hint">- - - - -</string>
</resources>